--- a/source/post/2020/2002.md
+++ b/source/post/2020/2002.md
@@ -23,7 +23,7 @@ type: post
 前言
 ----------------------------------------------
 
-之前一直耳闻 [nftables][2] 是下一代 [iptables][3] 。前段时间配了一台主机，折腾成家里的软路由。就一并来尝鲜一系列新东西，其中就包括 [nftables][2] 。[nftables][2] 和 [iptables][3] 、[ebtables][7] 等一样，都是对底层 xtables 的封装，目前看来 [nftables][2] 比 [iptables][3] 更简洁易用，更易读，更容易理解，扩展性和也更好。但是目前各个发行版中对 [nftables][2] 的支持还比较参差不齐，导致 [nftables][2] 很多功能比 [iptables][3] 还是有所缺失，所以个人感觉短期内还是替代不了 [iptables][3] （比如 tproxy 功能需要 linux kernel 4.19+， 而即便是 [CentOS 8][6] 的内核版本也只是 4.18 ，所以都不支持 ）。 [nftables][2] 所支持的功能列表及所以来的内核版本和内核模块可以在这里找到 https://wiki.nftables.org/wiki-nftables/index.php/Supported_features_compared_to_xtables 。
+之前耳闻 [nftables][2] 是下一代 [iptables][3] 。前段时间配了一台主机，折腾成家里的软路由。就一并来尝鲜一系列新东西，其中就包括 [nftables][2] 。[nftables][2] 和 [iptables][3] 、[ebtables][7] 等一样，都是对底层 xtables 的封装，目前看来 [nftables][2] 比 [iptables][3] 更简洁易用，更易读，更容易理解，扩展性和也更好。但是目前各个发行版中对 [nftables][2] 的支持还比较参差不齐，导致 [nftables][2] 很多功能比 [iptables][3] 还是有所缺失，所以个人感觉短期内还是替代不了 [iptables][3] （比如 tproxy 功能需要 linux kernel 4.19+， 而即便是 [CentOS 8][6] 的内核版本也只是 4.18 ，所以都不支持 ）。 [nftables][2] 所支持的功能列表及所以来的内核版本和内核模块可以在这里找到 https://wiki.nftables.org/wiki-nftables/index.php/Supported_features_compared_to_xtables 。
 
 [nftables][2] 的功能分两块，一块是内核支持，这个受限于内核版本。另一部分是用户空间的库和工具。有些发行版会滚动更新内核，但是 [nftables][2] 版本比较低，这时候如果要用就得自己编译。[nftables][2] 依赖库及命令行工具的代码仓库如下:
 
@@ -70,13 +70,11 @@ nftables与ebtables
 
 上面的流程图显示来自于桥接的走了另一套状态流转的流程。要控制桥接的流程，传统的做法可以使用 [ebtables][7] 。按文档的说法 （ https://www.mankier.com/8/ebtables-legacy#Description-Tables ）， 在 BROUTE 链DROP掉包，能阻止桥接来的包走转发规则，从而转走路由规则。 但是在 [nftables][2] 的文档里仅有 https://www.mankier.com/8/nft#Statements-Payload_Statement 里写了个例子改路由。然而我尝试了几次并没有成功。不管我怎么设置，最终还是走了桥接的包转发，并没有走我指定的流转路径（比如转换成tproxy）。另外还看到个文档 （ https://www.mankier.com/8/ebtables-nft ） [nftables][2] 目前还不支持对 BROUTE 的HOOK。所以我自己这里目前还是走的用 [ebtables][7] 。
 
-个人感觉 [ebtables][7] 使用起来比 [iptables][3] 麻烦一些，很多插件功能不支持，有些规则也有些限制，比如不支持 [ipset][8] 。但是凑合着还算好用吧。
+个人感觉 [ebtables][7] 使用起来比 [iptables][3] 麻烦一些，很多插件功能不支持，有些规则也有些限制，比如不支持 [ipset][8] 。但是凑合着还算能用吧。
 
 > 使用 [ebtables][7] 需要开启内核模块: ```br_netfilter```
->
 
-
-另外如果要使用网桥包转路由然后走比如tproxy需要增加如下配置:
+另外如果要使用网桥包转路由，然后走比如tproxy需要增加如下配置:
 
 ```bash
 echo "
@@ -101,9 +99,21 @@ sysctl -p ;
 nftables与ipset
 ----------------------------------------------
 
-我看了一圈文档，似乎是没找到 [nftables][2] 直接访问 [ipset][8] 的方式。按Wiki的说法（ https://wiki.nftables.org/wiki-nftables/index.php/Moving_from_ipset_to_nftables ） 是可以用 [nftables][2] 内置的set功能来代替。不过现有的一些工具之集成了对  [ipset][8] 的支持没有支持 [nftables][2] 的set的就得另想办法了。
+我看了一圈文档，没有找到 [nftables][2] 直接访问 [ipset][8] 的方式。按Wiki的说法（ https://wiki.nftables.org/wiki-nftables/index.php/Moving_from_ipset_to_nftables ） 是可以用 [nftables][2] 内置的set和map功能来代替。不过现有的一些工具之集成了对  [ipset][8] 的支持没有支持 [nftables][2] 的set和map的话，就得另想办法了。
 
-对于 [ipset][8] 的 skbinfo插件的功能，可以用 [nftables][2] 的map功能来代替。功能差不太多，个人觉得 [nftables][2] 的更好用一些。
+总体上 [ipset][8] 和 [nftables][2] 的map和set功能差不太多，有一个区别是 [nftables][2] 的map和set都是绑在 [nftables][2] 的table里的，而 [ipset][8] 没有table的概念。个人觉得 [nftables][2] 的更好用一些。
+
+部分参考对比如下:
+
+| [ipset][8]                                                                                     | [nftables][2]                                                          |
+|:-----------------------------------------------------------------------------------------------|:-----------------------------------------------------------------------|
+| ```ipset create V2RAY_BLACKLIST_IPV4 hash:ip family inet```                                    | ```nft add set ip v2ray BLACKLIST { type ipv4_addr\; }```              |
+| ```ipset flush V2RAY_BLACKLIST_IPV4```                                                         | ```nft flush set ip v2ray BLACKLIST```                                 |
+| ```ipset add V2RAY_BLACKLIST_IPV4 $PPP_OUTER_IP```                                             | ```nft add element ip v2ray BLACKLIST { $PPP_OUTER_IP } ;```           |
+| ```iptables -t mangle -A V2RAY -p tcp -m set --match-set V2RAY_BLACKLIST_IPV4 dst -j RETURN``` | ```nft add rule ip v2ray PREROUTING meta l4proto tcp ip daddr @BLACKLIST return``` |
+| ```ipset create myset hash:ip,port,ip family inet```                                           | ```nft add set inet filter myset { type type ipv4_addr . inet_service . ipv4_addr : verdict \; }```              |
+| ```ipset add myset 172.16.0.1,tcp:80,10.0.0.1```                                               | ```nft add element inet filter myset { 172.16.0.1 . 80 . 10.0.0.1 : accept } ;```           |
+| ```iptables -t filter -A INPUT -m set --match-set myset src,dst,dst -j ACCEPT```               | ```nft add rule inet filter INPUT meta nfproto ipv4 ip saddr . tcp dport . ip daddr vmap @myset``` |
 
 nftables与iptables与NAT
 ----------------------------------------------
@@ -124,6 +134,7 @@ blacklist ip6table_nat
 另外我本地为了支持NAT和一些辅助功能开启的模块如下:
 
 ```bash
+echo "
 xt_nat
 nf_reject_ipv4
 nf_reject_ipv6
@@ -147,6 +158,7 @@ nft_reject_inet
 nft_reject_bridge
 nft_chain_nat
 nft_nat
+" | tee /etc/modules-load.d/nftables-nat.conf
 ```
 
 nftables与firewalld
@@ -170,7 +182,7 @@ nft add rule inet security_firewall PREROUTING meta nfproto ipv6 fib saddr . iif
 nft add chain inet security_firewall INPUT { type filter hook input priority filter + 10\; policy accept\; }
 nft add rule inet security_firewall INPUT ct state { established, related } accept
 nft add rule inet security_firewall INPUT ct status dnat accept
-# 这里 br0是我自己建的用于内网通信的桥接，添加了enp5s0和enp1s0f0 。 enp1s0f1是我用来调试的接口， WAN口的出口留了两个用于拨号， enp1s0f2 和 enp1s0f3
+# 这里 br0是我自己建的用于内网通信的桥接，添加了enp1s0f0和enp1s0f1 。 enp5s0是我用来调试的接口， WAN口的出口留了两个用于拨号， enp1s0f2 和 enp1s0f3
 nft add rule inet security_firewall INPUT iifname { lo, br0, enp1s0f0, enp1s0f1, enp5s0 } accept
 # Internal services -- begin
 nft add rule inet security_firewall INPUT ip saddr {127.0.0.1/32, 192.168.0.0/16, 172.16.0.0/12, 10.0.0.0/8} tcp dport 22 ct state { new, untracked } accept
@@ -181,7 +193,7 @@ nft add rule inet security_firewall INPUT udp dport 53 ct state { new, untracked
 nft add rule inet security_firewall INPUT udp dport 67 ct state { new, untracked } accept
 nft add rule inet security_firewall INPUT udp dport 547 ct state { new, untracked } accept
 nft add rule inet security_firewall INPUT tcp dport 853 ct state { new, untracked } accept
-# 其他自定义要放过的服务端口
+# 其他自定义要放过的服务端口和协议
 # Internal services -- end
 nft add rule inet security_firewall INPUT meta l4proto { icmp, ipv6-icmp } accept
 nft add rule inet security_firewall INPUT ct state { invalid } drop
@@ -194,7 +206,7 @@ nft add rule inet security_firewall OUTPUT  ip6 daddr { ::/96, ::ffff:0.0.0.0/96
 nft add chain inet security_firewall FORWARD { type filter hook forward priority filter + 10\; policy accept\; }
 nft add rule inet security_firewall FORWARD  ct state { established, related } accept
 nft add rule inet security_firewall FORWARD  ct status dnat accept
-# 这里 br0是我自己建的用于内网通信的桥接，添加了enp5s0和enp1s0f0 。 enp1s0f1是我用来调试的接口， WAN口的出口留了两个用于拨号， enp1s0f2 和 enp1s0f3
+# 这里 br0是我自己建的用于内网通信的桥接，添加了enp1s0f0和enp1s0f1 。 enp5s0是我用来调试的接口， WAN口的出口留了两个用于拨号， enp1s0f2 和 enp1s0f3
 nft add rule inet security_firewall FORWARD  iifname { lo, br0, enp1s0f0, enp1s0f1, enp5s0 } accept
 nft add rule inet security_firewall FORWARD  ip6 daddr { ::/96, ::ffff:0.0.0.0/96, 2002::/24, 2002:a00::/24, 2002:7f00::/24, 2002:a9fe::/32, 2002:ac10::/28, 2002:c0a8::/32, 2002:e000::/19 } reject with icmpv6 type addr-unreachable
 #
@@ -211,13 +223,25 @@ nft add rule inet security_firewall FORWARD  reject with icmpx type admin-prohib
 
 以下纪录一下我折腾 [nftables][2] 的过程中留下的一些可以复用的脚本和趟的坑。
 
-1. NAT的设置脚本: https://github.com/owent-utils/docker-setup/blob/master/setup-router/ppp-nat/setup-nat-ssh.sh
-2. 防火墙设置脚本: https://github.com/owent-utils/docker-setup/blob/master/setup-router/ppp-nat/setup-nft-security.sh
-3. pppoe自动加入[ipset][8]和[nftables][2]的set的设置脚本: https://github.com/owent-utils/docker-setup/blob/master/setup-router/ppp-nat/setup-ppp-route-ipv4.sh
-4. 要使用 tproxy (透明代理) 和打 [SO_MARK][9] 的设置脚本: https://github.com/owent-utils/docker-setup/blob/master/setup-router/v2ray/setup-tproxy.nft.sh
-5. [docker][5]/[podman][4] 里如果要使用 tproxy (透明代理) 和打 [SO_MARK][9]，需要基于 [CAP_NET_ADMIN][10] 权限
-6. 要使用 tproxy (透明代理) 需要开启的内核模块: ```nf_tproxy_ipv4,nf_tproxy_ipv6,nf_socket_ipv4,nf_socket_ipv6,xt_TPROXY,nft_socket,nft_tproxy``` 。（其中 ```nft_tproxy``` 要求 linux kernel 4.19+）
-7. 要管理 [ebtables][7] 的 **broute** 链要开启内核模块: ```br_netfilter```
++ NAT的设置脚本: https://github.com/owent-utils/docker-setup/blob/master/setup-router/ppp-nat/setup-nat-ssh.sh
++ 防火墙设置脚本: https://github.com/owent-utils/docker-setup/blob/master/setup-router/ppp-nat/setup-nft-security.sh
++ pppoe自动加入[ipset][8]和[nftables][2]的set的设置脚本: https://github.com/owent-utils/docker-setup/blob/master/setup-router/ppp-nat/setup-ppp-route-ipv4.sh
++ 要使用 tproxy (透明代理) 和打 [SO_MARK][9] 的设置脚本: https://github.com/owent-utils/docker-setup/blob/master/setup-router/v2ray/setup-tproxy.nft.sh
++ [docker][5]/[podman][4] 里如果要使用 tproxy (透明代理) 和打 [SO_MARK][9]，需要基于 [CAP_NET_ADMIN][10] 权限
++ 要使用 tproxy (透明代理) 需要开启的内核模块: （其中 ```nft_tproxy``` 要求 linux kernel 4.19+）
+  >
+  > ```bash
+  > echo "
+  > nf_tproxy_ipv4
+  > nf_tproxy_ipv6
+  > nf_socket_ipv4
+  > nf_socket_ipv6
+  > xt_TPROXY,nft_socket
+  > nft_tproxy
+  > " | tee /etc/modules-load.d/nftables-tproxy.conf
+  > ```
+
++ 要管理 [ebtables][7] 的 **broute** 链要开启内核模块: ```br_netfilter```
 
 ### nftables Hook
 
