--- a/source/post/2020/2002.md
+++ b/source/post/2020/2002.md
@@ -236,7 +236,8 @@ nft add rule inet security_firewall FORWARD  reject with icmpx type admin-prohib
   > nf_tproxy_ipv6
   > nf_socket_ipv4
   > nf_socket_ipv6
-  > xt_TPROXY,nft_socket
+  > xt_TPROXY
+  > nft_socket
   > nft_tproxy
   > " | tee /etc/modules-load.d/nftables-tproxy.conf
   > ```
