update C++20 coroutine sample

--- a/source/post/2020/2091.md
+++ b/source/post/2020/2091.md
@@ -29,6 +29,8 @@ type: post
 基本流程和通用分布式事务服务器
 ----------------------------------------------
 
+其实分布式事务的本质是把事务的成功与否收敛到单点上，也就是协调者。
+
 TCC
 
 1. 创建事务,分配事务ID（两次数据库操作，一次分配ID，一次创建）
