--- a/source/post/2019/1911.md
+++ b/source/post/2019/1911.md
@@ -43,7 +43,7 @@ type: post
 | CPU                              | Intel(R) Xeon(R) Gold 61xx CPU @ 2.50GHz \* 48      |
 | L1 Cache                         | 64Bytes\*64sets\*8ways=32KB                         |
 | 系统负载                         | 0.19 0.25 0.27                                      |
-| 内存占用                         | 3.5GB(used)/120GB(cached)/114GB(free)               |
+| 内存占用                         | 3.5GB(used)/125GB(sum)                              |
 | CMake                            | 3.15.2                                              |
 | GCC版本                          | 9.2.0                                               |
 | Clang版本                        | 9.0.0                                               |
