add more images for 2004

--- a/source/post/2020/2004.md
+++ b/source/post/2020/2004.md
@@ -29,11 +29,17 @@ libcopp对 C++20 协程的设计抽象
 
 接入样例和目标
 
+![](2004-future-context.png)
+
 #### 小对象优化
 
 ### 协程任务 task_t
 
+![](2004-std-coroutine-task.png)
+
 ### 生成器 generator_t
+
+![](2004-std-coroutine-generator.png)
 
 ### 压力测试
 
@@ -539,6 +545,52 @@ libcopp对 C++20 协程的设计抽象
 {{< /chart >}}
 
 ### 原task对象的接入
+
+现在的实现中，C++20协程可以 ```co_await``` 原来老的 ```cotask::task<T>``` 。反过来有个想法是 ```task_action::operator()``` 返回 ```copp::future::task_t``` 的话就可实现反过来的 ```co_await``` 。但是要兼容以前的函数签名得模板写得比较调皮，而且也只能支持一层。暂时还没决定好要怎么写。现在支持的向前兼容的形式如下:
+
+```cpp
+#include <iostream>
+
+#include <libcopp/future/std_coroutine_task.h>
+#include <libcotask/task.h>
+
+#if defined(LIBCOPP_MACRO_ENABLE_STD_COROUTINE) && LIBCOPP_MACRO_ENABLE_STD_COROUTINE
+
+typedef cotask::task<> my_task_t;
+
+static copp::future::task_t<int> call_for_await_cotask(my_task_t::ptr_t t) {
+    if (t) {
+        co_return co_await t;
+    }
+
+    co_return 0;
+}
+
+static int cotask_action_callback(void *) {
+    int ret = 234;
+    void* ptr = nullptr;
+    cotask::this_task::get_task()->yield(&ptr);
+    if (ptr != nullptr) {
+        ret = *reinterpret_cast<int*>(ptr);
+    }
+    return ret;
+}
+
+int main() {
+    my_task_t::ptr_t co_task = my_task_t::create(cotask_action_callback);
+
+    auto t = call_for_await_cotask(co_task);
+    co_task->start();
+
+    int res = 345;
+    co_task->resume(reinterpret_cast<void*>(&res));
+
+    if (nullptr != t.data()) {
+        std::cout<< "co_await a cotask::task and get result: "<< *t.data()<< std::endl;
+    }
+    return 0;
+}
+```
 
 GCC 10.1.0 的坑
 ----------------------------------------------
