--- a/source/post/2020/2004.md
+++ b/source/post/2020/2004.md
@@ -25,9 +25,9 @@ type: post
 前言
 ----------------------------------------------
 
-计划给 [libcopp][1] 接入[C++20协程][11]也有一阵子了。最近GCC 10.1.0 发布，主流编译器基本也都支持了这个功能。最近就进行了一些接入的实施。我在设计新的接入模型的时候一方面考虑重点是降低抽象的性能开销，另一方面是想要做到尽可能容易地度过过渡阶段。也就是在C++20正式完全普及之前可以和之前地协程系统配合，并且以后某个时间点切过来足够方便。
+最近GCC 10.1.0 发布，三大编译器（MSVC、GCC、Clang）都已经支持了[C++20协程][11]，之前给 [libcopp][1] 接入 [C++20协程][11] 的计划也就提上了日程。[C++20协程][11] 在创建、切换开销和内存分配上和传统有栈协程相比有着无可比拟地优势。但是C++20全面普及还有相当长一段时间，所以我们设计的重要目标之一就是能够让以后的迁移更容易且更平滑地进行，本文则是记录了 [libcopp][1] 接入 [C++20协程][11] 时地一些性能上和平滑接入上的思考和成果。
 
-设计 [libcopp][1] 接入[C++20协程][11]的结构的时候主要参考了 [Rust语言][9] 里号称零开销抽象的设计（其中一个重要原因是 [Rust][9] 的很多设计哲学和设计思路和C++一样）和 CppCon 2019 上一位演讲者分享的 [cppcoro][6] 。
+设计 [libcopp][1] 接入[C++20协程][11]的结构的时候主要参考了 [Rust语言][9] 里号称零开销抽象的设计（其中一个重要原因是 [Rust][9] 的很多设计哲学和设计思路和C++一样）和 CppCon 2019 上一位演讲者分享的 [cppcoro][6] ，特此感谢。
 
 C++20 协程
 ----------------------------------------------
@@ -1019,7 +1019,7 @@ C:/msys64/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/10.1.0/../../../../x86_64-w6
 ### 生命周期和析构
 
 本来受 [cppcoro][6] 的启发，想实现这样的使用接口。 ```auto poll_data = co_await copp:future::make_generator<T, TPD>(...);``` 。然后 ```poll_data``` 指向 ```copp:future::poll_t<T>``` 来获取协程数据结果。 这里有两个临时对象，一个是 ```generator_t``` ， 另一个是 await ```generator_t``` 时产生的 ```awaitable_t``` 。 为了减少分配开销，我们的context和future对象都直接分配在 ```generator_t``` 里，然后 ```generator_t``` 禁止复制和禁止转移， 并且在 ```awaitable_t``` 的 ```await_resume``` 接口里通过右值构造临时对象转移数据。
-这个流程在 MSVC 上是可行的，但是在GCC里 ```awaitable_t``` 挂起之前，临时的 ```generator_t``` 会被析构掉。这回导致context和future对象被释放。 所以为了性能考虑，最终还是只允许稍微繁琐一点的使用方式。
+这个流程在 MSVC 上是可行的，但是在GCC里 ```awaitable_t``` 挂起之前，临时的 ```generator_t``` 会被析构掉。这会导致context和future对象被释放。 所以为了性能考虑，最终还是只允许稍微繁琐一点的使用方式。
 
 ```cpp
 auto generator = copp:future::make_generator<T, TPD>(...);
