--- a/source/post/2020/2004.md
+++ b/source/post/2020/2004.md
@@ -25,7 +25,7 @@ type: post
 前言
 ----------------------------------------------
 
-最近GCC 10.1.0 发布，三大编译器（MSVC、GCC、Clang）都已经支持了[C++20协程][11]，之前给 [libcopp][1] 接入 [C++20协程][11] 的计划也就提上了日程。[C++20协程][11] 在创建、切换开销和内存分配上和传统有栈协程相比有着无可比拟地优势。但是C++20全面普及还有相当长一段时间，所以我们设计的重要目标之一就是能够让以后的迁移更容易且更平滑地进行，本文则是记录了 [libcopp][1] 接入 [C++20协程][11] 时地一些性能上和平滑接入上的思考和成果。
+最近GCC 10.1.0 发布，三大编译器（MSVC、GCC、Clang）都已经支持了[C++20协程][11]，之前给 [libcopp][1] 接入 [C++20协程][11] 的计划也就提上了日程。[C++20协程][11] 在创建、切换开销和内存分配上和传统有栈协程相比有着无可比拟的优势。但是C++20全面普及还有相当长一段时间，所以我们设计的重要目标之一就是能够让以后的迁移更容易且更平滑地进行，本文则是记录了 [libcopp][1] 接入 [C++20协程][11] 时地一些性能上和平滑接入上的思考和成果。
 
 设计 [libcopp][1] 接入[C++20协程][11]的结构的时候主要参考了 [Rust语言][9] 里号称零开销抽象的设计（其中一个重要原因是 [Rust][9] 的很多设计哲学和设计思路和C++一样）和 CppCon 2019 上一位演讲者分享的 [cppcoro][6] ，特此感谢。
 
@@ -300,7 +300,7 @@ int main() {
 
 ![](2004-future-context.png)
 
-我们提供了更多呃辅助工具以适应各种使用场景的，更多详情见[libcopp dev分支][12]的单元测试 https://github.com/owt5008137/libcopp/blob/dev/test/case/future_and_std_coroutine_test.cpp 和 [README][12] 。
+我们提供了更多的辅助工具以适应各种使用场景的，更多详情见[libcopp dev分支][12]的单元测试 https://github.com/owt5008137/libcopp/blob/dev/test/case/future_and_std_coroutine_test.cpp 和 [README][12] 。
 
 #### 小对象优化
 
@@ -510,7 +510,7 @@ int main() {
 | libcopp task_t - Clang               | 24 ns / 24 ns      |  237 ns / 142 ns      |   24 ns / 24 ns       | 357 ns / 156 ns        |   44 ns / 33 ns        |
 | libcopp task_t(no trivial) - Clang   | 53 ns / 44 ns      |  257 ns / 155 ns      |   53 ns / 45 ns       | 357 ns / 175 ns        |   70 ns / 61 ns        |
 
-上面 [librf][8] 是另一个使用[C++20协程][11]的封装库，仅用它自带的工具，用一样的编译选线给出压力测试结果对比。上面还提供了使用 [libcopp][1] 传统有栈协程的开销对比。和其他一些常用协程库比如 [libco][15] 、 [libgo][14] 、 goroutine 等的对比可以见我之前一篇分享: [《C++20 Coroutine 性能测试 (附带和libcopp/libco/libgo/goroutine/linux ucontext对比)》][13]
+上面 [librf][8] 是另一个使用[C++20协程][11]的封装库，仅用它自带的工具，用一样的编译选线给出压力测试结果对比，据作者说单协程切换慢是由于内部的定时器接口开销比较高。上面还提供了使用 [libcopp][1] 传统有栈协程的开销对比。和其他一些常用协程库比如 [libco][15] 、 [libgo][14] 、 goroutine 等的对比可以见我之前一篇分享: [《C++20 Coroutine 性能测试 (附带和libcopp/libco/libgo/goroutine/linux ucontext对比)》][13]
 
 最后测出来的创建 ```task_t``` 的开销分布如下:
 
@@ -1014,7 +1014,7 @@ C:/msys64/mingw64/include/c++/10.1.0/coroutine:222: multiple definition of `.wea
 C:/msys64/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/10.1.0/../../../../x86_64-w64-mingw32/bin/ld.exe: CMakeFiles/libcopp_unit_test.dir/objects.a(future_and_std_coroutine_test2.cpp.obj):future_and_std_coroutine_test2.cpp:(.data+0x0): multiple definition of `.weak._ZNSt7__n486114__noop_coro_frE._ZnwyPv'; CMakeFiles/libcopp_unit_test.dir/objects.a(future_and_std_coroutine_test.cpp.obj):D:/workspace/github/libcopp/test/frame/test_manager.h:130: first defined here
 ```
 
-看提示和出错的符号名感觉应该是引用到的相关头文件应该要生成弱符号，结果生成了强符号导致链接不过。这个问题仅在Windows上出现（我的测试环境是MSYS2带的MinGW64环境， GCC 10.1.0 ），Linux下正常。初步查了下Windows下输出的中间文件 ```.obj``` 中生成了代码（T）符号和弱（W）符号。而在Linuxia只生成了弱（W）符号。看涉及的符号名感觉是GCC的BUG，猜测是GCC 10.1.0实现生成的符号可见性有点问题，我没有过多地深究。
+看提示和出错的符号名感觉应该是引用到的相关头文件应该要生成弱符号，结果生成了强符号导致链接不过。这个问题仅在Windows上出现（我的测试环境是MSYS2带的MinGW64环境， GCC 10.1.0 ），Linux下正常。初步查了下Windows下输出的中间文件 ```.obj``` 中生成了代码（T）符号和弱（W）符号。而在Linuxia只生成了弱（W）符号。看涉及的符号名感觉是GCC的BUG，猜测是GCC 10.1.0实现生成的符号可见性有点问题，我没有过多的深究。
 
 ### 生命周期和析构
 
