--- a/source/post/2020/2004.md
+++ b/source/post/2020/2004.md
@@ -1000,6 +1000,14 @@ int main() {
 }
 ```
 
+关于MSVC的 ```std::experimental::generator``` 和 [cppcoro][6] 的 ```cppcoro::generator```
+----------------------------------------------
+
+[cppcoro][6] 里有个 ```cppcoro::generator``` ， MSVC现在最新的版本里也有个 ```std::experimental::generator``` ，这两个东西的实现和功能基本上是一样的。但是这两个东东的设计功能和我们的 ```libcopp::future::generator_t``` 不同，前者主要是对协程外数据访问提供迭代器取协程内产生的数据，而后者是给协程内部提供数据产生器。
+
+我个人地理解里，在我们特别是游戏服务器的使用场景，一般是有个大的任务，里面调用很多个不同的SDK或者模块。在这种场景中，能够使外部模块和外部系统的接入能够方便地接入到我们地协程中就更加地实用。
+
+
 GCC 10.1.0 的坑
 ----------------------------------------------
 
