--- a/source/post/2019/1902.md
+++ b/source/post/2019/1902.md
@@ -264,7 +264,7 @@ Paper里只是简单提了下关于时间方面的同步流程。大体上就三
 3. 再有 \\\( t^{Paxos}\_{safe} \\\) 的刷新依赖于 **Paxos writes** \(也就是事务执行\)。
   > 这会导致如果没有事务的话安全时间不增长，那么在从节点执行镜像读事务就会被阻塞。**Spanner**[^spanner] 解决方案是维护一个下一个事务的最小时间 ***MinNextTS\(\)*** 。每8秒刷新一次，因为这个是主节点才会执行所以不存在冲突问题。所以最坏情况下，从节点对8秒前的数据的读取也可以直接提供镜像读的服务（不需要考虑同步问题）。
 
-文中也有提到 **TrueTime API** 依赖CPU时钟，这个出故障的概率远远小于其他硬件所以可以忽略不计了。另外这个论文发布时的 **Spanner**[^spanner] 版本在延迟方面毛刺还比较严重。我估计时因为时间机制的定期同步+误差容忍值引起的。感觉还是由比较大的优化空间。
+文中也有提到 **TrueTime API** 依赖CPU时钟，这个出故障的概率远远小于其他硬件所以可以忽略不计了。另外这个论文发布时的 **Spanner**[^spanner] 版本在延迟方面毛刺还比较严重。我估计是因为时间机制的定期同步+误差容忍值引起的。感觉还是由比较大的优化空间。
 
 个人感觉 **Spanner**[^spanner] 和 **Percolator**[^percolator] 相比最大的特点是用基 **Paxos group** 和 **TrueTime API** 代替了单点的时间戳服务。从而实现了真正意义上的平行扩容。这篇Paper没有太多提及事务的故障处理和冲突处理的部分，内容可能在我即将要看的F1 \( **Spanner**[^spanner] 的一个客户端实现 \) 里。
 
