--- a/source/post/2020/2005.md
+++ b/source/post/2020/2005.md
@@ -15,7 +15,7 @@ tags:
   - distributed transaction
   - percolator
   - spanner
-title: 在游戏服务器中使用分布式事务
+title: 在游戏服务中使用分布式事务
 type: post
 ---
 
@@ -58,38 +58,47 @@ type: post
 
 而在游戏项目中，这个关系就比较复杂，因为涉及多方和多种不同的逻辑。比如移除好友时可能也要清理多个账户上好友间的其他交互数据（邀请、通知、分享等），玩家被批准加入公会后可能要保证这个玩家加入其他公会的申请失效，而此时玩家可能并不在线，者就涉及不同的业务模块（也就是 **参与者** ）需要根据自身的业务特性来实现这个 [幂等性][3] ，实现的内容和策略都大相径庭。
 
-在我们目前实现的事务 **参与者** 实现中，均采用给事务数据操作单元分配一个递增的事件ID（ ```event_id``` ）来实现，这个ID仅仅和某个力度很小的逻辑模块数据单元有关（比如每个玩家的好友数据块上都有自己的事件ID分配器，多个玩家之间的分配器之间不会相互影响；同一个玩家的好友和公会数据之间也不会互相影响）。在业务逻辑中，我们会处理事务关联关系，并在逻辑模块数据单元里记录下最后执行的事务的事件ID。因为无论什么数据，到最基础的逻辑也都是增删改查，只是不同类型数据的关联关系和逻辑条件不一样而已。对于删除的数据，我们会保留一段时间，这个时间至少要大于事务的超时时间+N次自动retry的时间+时间误差。这样，我们就可以仅根据事件ID的大小来决定事务的流程是需要执行还是忽略。同时我们还增加了数据块级别的事件ID，这个数据块级别的事件ID和逻辑模块数据单元里记录的事件ID的关系有点像数据库的行级锁和数据列的关系。
+在我们目前实现的事务 **参与者** 实现中，均采用给事务数据操作单元分配一个递增的事件ID（ ```event_id``` ）来实现，这个ID仅仅和某个力度很小的逻辑模块数据单元有关（比如每个玩家的好友数据块上都有自己的事件ID分配器，多个玩家之间的分配器之间不会相互影响；同一个玩家的好友和公会数据之间也不会互相影响）。在业务逻辑中，我们会处理事务关联关系，并在逻辑模块数据单元里记录下最后执行的事务的事件ID。因为无论什么数据，到最基础的逻辑也都是增删改查，只是不同类型数据的关联关系和逻辑条件不一样而已。对于删除的数据，我们会保留一段时间，这个时间至少要大于事务的超时时间+N次自动retry的时间+时间误差。通过这种方式，我们就可以仅根据事件ID的大小来决定事务的流程是需要执行还是忽略。
 
-业务补偿： event_id
+我们还增加了数据块级别的事件ID，这个数据块级别的事件ID和逻辑模块数据单元里记录的事件ID的关系有点像数据库的行级锁和数据列的关系。这有什么作用呢？比如现如今的业务有要求必须提供删除账号的功能，那么怎么判定删除账号和新增或者变更数据的事务同时进行，那么我们怎么判定新增或者变更数据的操作是否要被忽略呢？这时候我们就可以给删除事务的事件ID赋值到数据块级别的事件ID记录。如果后续的事务操作大于这个数据块级别的事件ID则是需要执行的，否则是可以直接忽略的。
+
+即便实现了上述的分布式事务的系统，我们还是少不了传统的 **业务补偿** 逻辑，只是可以简化一些。这是因为在游戏服务器业务中，一般不会有特别高的一致性要求，比如上面这些业务服务器大多数是没有主备的。那么我们还是要有一定的策略来处理执行者认为事务成功，但是执行节点宕机导致的数据一致性问题。这个 **业务补偿** 逻辑就和传统的方案很像了，只是可以比较简单一些，因为这个阶段只是需要保证数据能正常运行，并不特别依赖它作逻辑一致性保证，即可以弱化修复流程。
+
+
 
 容灾和负载均衡
 ----------------------------------------------
 
-1. 参与者再超时时去事务服务器拉取事务状态
-  > 1.1 Not  Found
+由于我们用 **分布式池化ID分配器** 来分配事务，所以我们对事务的负载均衡就可以使用事务ID作为一致性Hash的来分发到协调者服务器上。而协调者服务是一个带缓存的无状态服务，逻辑也很简单（创建保存、读数据、标记已完成的参与者、如果所有参与者都处理完毕了就清理数据三种）。所以它的每次操作都是用CAS对内存数据操作，如果CAS返回数据版本过老，则是缓存过期，会重新拉取数据然后尝试redo（类似 [Wound-wait][1] 策略 ）。这里的一致性保证依赖了所使用的内存数据库的一致性保证。
+
+1. 参与者在超时的时候去事务服务器拉取事务状态
+  > 1.1 Not Found
   > 1.2 Commited
   > 1.2 Abort
 
-协调者无状态，类似 [Wound-wait][1] 策略。
-
 对于玩家对象我们有一些特殊对待，因为它由网关层决定在哪个gamesvr节点上拉起。如果在执行事务的过程中玩家对象被需要在其他节点上拉起，则需要引入一些列的锁、超时管理等机制，因为事务执行的RPC次数比较多，如果事务执行延迟比较大，也会增加登入时的稳定性。所以为了避免这些麻烦，我们目前的玩家对象（gamesvr上）不作为事务的参与者，只能作为执行者。目前我们的服务器实现中，对好友服务和公会服务实施了分布式事务支持。
+
+我们目前实现的服务结构和关系如下：
+
+![2005-transaction-roles.png](2005-transaction-roles.png)
 
 垃圾处理
 ----------------------------------------------
 
-一些对比
+简单对比
 ----------------------------------------------
 
-|           特性      |                    我们的分布式事务服务                  |               Google Percolator                  |               Google Spanner                        |
-|---------------------|----------------------------------------------------------|--------------------------------------------------|-----------------------------------------------------|
-| 事件ID/事件版本号   | 池化分配，按服务对象key分布式事件版本号,设计QPS>1亿/s    | 全服单点timestamp oracle服务，QPS大约200万/s     | TrueTime时间戳服务                                  |
-| 协调者              | 专用协调者服务器                                         | 固定算法，指定一个参与事务执行者做协调者         | Paxos算法选举Leader做协调者                         |
-| 脏数据/垃圾清理     | 协调者服务器定期清理，下一次GET/SET时清理                | 下一次GET/SET时清理                              | 下一次GET/SET时清理                                 |
-| 底层存储            | 任意内存数据库(比如redis)                                | BigTable                                         | BigTable                                            |
-| 延迟                | 每个事务4次DB请求，1次内部RPC，每个参与者3次内部RPC      | 索引服务，延迟不敏感                             | 26-200ms                                            |
-| QPS                 | 依赖服务器间通信和底层存储，设计QPS>=1亿/s               | 对比BigTable，读事务\*0.94，写事务BigTable\*0.23 | -                                                   |
-| 冲突策略            | 根据业务实现，目前业务实现是无锁。[Wound-wait][1]        | 悲观锁，类似 [Wound-wait][1]                     | 只读无锁，读写悲观锁，[Wound-wait]（F1引入了乐观锁）|
-| 其他特点            | 适用于多参与者对等接入，适用于多种业务类型，但接入较复杂 | 索引服务，自动化依赖分析和触发依赖事务           | 分布式关系型数据库                                  |
+|           特性      |                    我们的分布式事务服务                  |               Google Percolator                  |               Google Spanner                                        |
+|---------------------|----------------------------------------------------------|--------------------------------------------------|---------------------------------------------------------------------|
+| 事件ID/事件版本号   | 池化分配，按服务对象key分布式事件版本号,设计QPS>1亿/s    | 全服单点timestamp oracle服务，QPS大约200万/s     | TrueTime时间戳服务                                                  |
+| 协调者              | 专用协调者服务器                                         | 固定算法，指定一个参与事务执行者做协调者         | Paxos算法选举Leader做协调者                                         |
+| 脏数据/垃圾清理     | 协调者服务器定期清理，下一次GET/SET时清理                | 下一次GET/SET时恢复/清理，定期扫描               | 参与者超时清理。切换协调者leader时，新leader负责恢复/清理未完成事务 |
+| 底层存储            | 任意支持CAS的内存Key-Value数据库(比如redis)              | BigTable                                         | BigTable                                                            |
+| 延迟                | 每个事务4次DB请求，1次内部RPC，每个参与者3次内部RPC      | 索引服务，延迟不敏感                             | 26-200ms                                                            |
+| QPS                 | 依赖服务器间通信和底层存储，设计QPS>=1亿/s               | 对比BigTable，读事务\*0.94，写事务BigTable\*0.23 | -                                                                   |
+| 冲突策略            | 根据业务实现，目前业务实现是无锁。[Wound-wait][1]        | 悲观锁，Get前清理失效事务                        | 只读无锁，读写悲观锁，[Wound-wait]（F1引入了乐观锁）                |
+| 一致性保证          | 目前业务实现是每个Key独立的递增事件ID，协调者CAS         | 锁记录操作的节点，Chubby锁服务记录节点存活       | 依赖TrueTime时间戳，服务器间低延迟和安全时间 \\\( T\_{safe} \\\)    |
+| 其他特点            | 适用于多参与者对等接入，适用于多种业务类型，但接入较复杂 | 索引服务，自动化依赖分析和触发依赖事务           | 分布式关系型数据库                                                  |
 
 优化
 ----------------------------------------------
