Add Aurora draft

--- a/source/post/2020/2005.md
+++ b/source/post/2020/2005.md
@@ -56,7 +56,7 @@ type: post
 
 实现分布式事务需要所有参与者实现事务操作的 [幂等性][3] ( $$f(f(x)) = f(x)$$ ) 。说人话就是执行一次和执行N次，的效果相同。在事务系统中还要更进一步，要至少保证最终一致性。为了达到这个目标，一般不同的系统有不同的取舍和方案，这在我的另一篇文章中 [《Anna（支持任意扩展和超高性能的KV数据库系统）阅读笔记 - 主流分布式KVS的比较》](https://owent.net/2019/1905.html#%E4%B8%BB%E6%B5%81%E5%88%86%E5%B8%83%E5%BC%8Fkvs%E7%9A%84%E6%AF%94%E8%BE%83) 有一些简单的总结。
 
-在传统存储系统中，这个 [幂等性][3] 的事务操作比较容易抽象统一，因为存储系统的操作无非是增删改查，其中删比较特殊复杂一些（ **GFS**[^gfs] 的论文有提及）。而在 [Percolator][^Percolator] 系统中，主要是Google的索引系统，它的模块间关系更加简单一些，只是需要触发被依赖的模块更新而已。
+在传统存储系统中，这个 [幂等性][3] 的事务操作比较容易抽象统一，因为存储系统的操作无非是增删改查，其中删比较特殊复杂一些（ [GFS][^gfs] 的论文有提及）。而在 [Percolator][^Percolator] 系统中，主要是Google的索引系统，它的模块间关系更加简单一些，只是需要触发被依赖的模块更新而已。
 
 而在游戏项目中，这个关系就比较复杂，因为涉及多方和多种不同的逻辑。比如移除好友时可能也要清理多个账户上好友间的其他交互数据（邀请、通知、分享等），玩家被批准加入公会后可能要保证这个玩家加入其他公会的申请失效，而此时玩家可能并不在线，者就涉及不同的业务模块（也就是 **参与者** ）需要根据自身的业务特性来实现这个 [幂等性][3] ，实现的内容和策略都大相径庭。
 
@@ -95,7 +95,7 @@ type: post
 | 事件ID/事件版本号   | 池化分配，按服务对象key分布式事件版本号,设计QPS>1亿/s    | 全服单点timestamp oracle服务，QPS大约200万/s     | TrueTime时间戳服务                                                             |
 | 协调者              | 专用 **协调者** 服务器                                   | 固定算法，指定一个参与事务执行者做协调者         | Paxos算法选举Leader做 **协调者**                                               |
 | 脏数据/垃圾清理     | **参与者** 服务器定期清理，下一次GET/SET时清理           | 下一次GET/SET时恢复/清理，定期扫描               | **参与者** 超时清理。切换 **协调者** leader时，新leader负责恢复/清理未完成事务 |
-| 底层存储            | 任意支持CAS的内存Key-Value数据库(比如redis)              | [BigTable][^bigtable]                            | [BigTable][^bigtable]                                                          |
+| 底层存储            | 任意支持CAS的内存Key-Value数据库(比如 [redis][^redis] )  | [BigTable][^bigtable]                            | [BigTable][^bigtable]                                                          |
 | 延迟                | 每个事务4次DB请求，1次内部RPC，每个参与者3次内部RPC      | 索引服务，延迟不敏感                             | 26-200ms                                                                       |
 | QPS                 | 依赖服务器间通信和底层存储                               | 对比BigTable，读事务\*0.94，写事务BigTable\*0.23 | -                                                                              |
 | 冲突策略            | 根据业务实现，目前业务实现是无锁                         | 悲观锁，Get前清理失效事务                        | 只读无锁，读写悲观锁，[Wound-wait][1]（F1引入了乐观锁）                        |
@@ -107,7 +107,7 @@ type: post
 后续的优化
 ----------------------------------------------
 
-分布式事务的细节优化点其实非常多，在我们目前的系统中主要还有两个方向的优化。第一是上面提到的更严谨的事务加锁流程。第二是我们目前的事务完成完全是 **参与者** 驱动的，那么如果 **参与者** 所在机器如果宕机了，并且没有再上线的话（比如特别是玩家流失以后），那么 **协调者** 就会一直收不到 **参与者** 的完成通知，就会遗留一些事务数据一直处于没有清理的状态。 目前我的想法是后续加一个定时任务，定期扫描出超时很久并且未完成的事务，然后通知 **参与者** 拉起对应数据块继续把事务执行完，可能会和 [Percolator][^percolator] 里的定期扫描比较像。因为事务表数据库只会保存正在进行未完成的事务数据，所以即便全表扫描数据量也不会很大，而且如果数据库支持快照的话可以从快照里读，也不会影响现在业务。
+分布式事务的细节优化点其实非常多，在我们目前的系统中主要还有两个方向的优化。第一是上面提到的更严谨的事务加锁流程。第二是我们目前的事务完成完全是 **参与者** 驱动的，那么如果 **参与者** 所在机器如果宕机了，并且没有再上线的话（比如特别是玩家流失以后），那么 **协调者** 就会一直收不到 **参与者** 的完成通知，就会遗留一些事务数据一直处于没有清理的状态。 目前我的想法是后续加一个定时任务，定期扫描出超时很久并且未完成的事务，然后通知 **参与者** 拉起对应数据块继续把事务执行完，可能会和 [Percolator][^percolator] 里的定期扫描比较像。因为事务表数据库只会保存正在进行未完成的事务数据，所以即便全表扫描数据量也不会很大，而且如果数据库支持快照的话可以从快照里读，也不会影响正在运行的业务。
 
 最后，欢迎有兴趣的小伙伴们一起交流，如果文中有什么偏差的地方欢迎指正。
 
