--- a/source/post/2020/2007.md
+++ b/source/post/2020/2007.md
@@ -21,6 +21,35 @@ type: post
 + 使用REDO日志存储，和redis一样（容易复制，容易补空洞）
 + 使用递增的LSN(Log Sequence Number)处理冲突（补偿策略）
 
+存储层:
+
++ 日志按PG分组(Protection  Groups),每个PG 10GB
++ 不需要2PC，容灾和故障恢复直接复制PG
++ gossip协议同步和填补WAL空洞
++ 定义VCL(Volume Complete LSN)标识本地已经完成执行的事务Log序号
++ 定义VDL(Volume Durable LSN)标识本地已经完成持久化的事务Log序号。 \\\( VDL<=VCL \\\)
+
+Write:
+
++ 定义LAL(LSN  Allocation  Limit)用于控制执行队列的最大长度（1千万）。 \\\( max(SLN) <= VDL+VCL \\\)
++ 每个PG定义一个SCL(Segment  Complete  LSN)标识已经完成的Log序号
++ 每个Log记录上一条同PG的Log索引，构成链表
+
+Commit:
+
++ 递增VDL即可
++ 专有线程用于回复客户端
+
+Read:
+
++ 带本地Page缓存，本地缓存的LSN总是小于等于VDL，所以缓存淘汰和换入直接替换即可，不存在落地和一致性问题
++ 定义PGMRPL(per-PG Minimum Read Point LSN)，标识每个PG的Minimum  Read  Point  LSN。即这个值之前的所有Log都已经同步到所有的副本。
++ 维护执行中的事务队列，小于PGMRPL的事务可以被GC
++ 使用gossip协议同步PGMRPL
+
+
+副本读的可见性？
+
 [1]: https://media.amazonwebservices.com/blog/2017/aurora-design-considerations-paper.pdf
 [2]: http://www.dbms2.com/2010/05/01/ryw-read-your-writes-consistency/
 [3]: http://pages.cs.wisc.edu/~yxy/cs839-s20/papers/aurora-sigmod-18.pdf
