--- a/source/post/2020/2008.md
+++ b/source/post/2020/2008.md
@@ -17,11 +17,13 @@ type: post
 
 主要就看了两篇Paper， [《Amazon Aurora - Design Considerations for High Throughput Cloud-Native Relational Databases》][1] 是一个整体性质的介绍和概述。 [《Amazon Aurora: On Avoiding Distributed Consensus for I/Os,Commits, and Membership Changes》][6] 是对其重点部分的存储服务的
 
-+ 6个副本，4节点确认写，三节点确认读。三DC部署。
++ 6个副本，4节点确认写，三节点确认读。三DC(Amazon Zone)部署。
   + 一个DC灾害并且引起容灾抖动的情况，可持续服务
   + [**Read Your Writes**][2] 的扩展
+  + 保证在一个节点升级的时候，如果有一个DC(Amazon Zone)发生天灾，读服务仍然可用
 + 使用REDO日志存储，和redis一样（容易复制，容易补空洞）
 + 使用递增的LSN(Log Sequence Number)处理冲突（补偿策略）
++ 区分Writer和Peplicator，仅Writer可能出现undo操作（MVCC）
 
 存储层:
 
@@ -36,6 +38,8 @@ Write:
 + 定义LAL(LSN  Allocation  Limit)用于控制执行队列的最大长度（1千万）。 \\\( max(SLN) <= VDL+VCL \\\)
 + 每个PG定义一个SCL(Segment  Complete  LSN)标识已经完成的Log序号
 + 每个Log记录上一条同PG的Log索引，构成链表
++ 合包策略和 [atbus][7] 一样
+
 
 Commit:
 
@@ -48,6 +52,7 @@ Read:
 + 定义PGMRPL(per-PG Minimum Read Point LSN)，标识每个PG的Minimum  Read  Point  LSN。即这个值之前的所有Log都已经同步到所有的副本。
 + 维护执行中的事务队列，小于PGMRPL的事务可以被GC
 + 使用gossip协议同步PGMRPL
++ 使用VDL来同步Read View
 
 其他:
 
@@ -57,6 +62,7 @@ Read:
 + 写数据的隔离性和社区版MySQL一致
 + 个人理解读和镜像隔离性依赖InnoDB内的B+树+共享的redo log
 + 整体设计特别适合 [LSM Tree][5]
++ GC策略: 可以安全回收PGMRPL(per-PG Minimum Read Point LSN)之前的Log
 
 性能:
 
@@ -109,3 +115,4 @@ Table 4: Replica Lag for SysBench Write-Only(msec)
 [4]: https://ai.google/research/pubs/pub39966
 [5]: https://en.wikipedia.org/wiki/Log-structured_merge-tree
 [6]: https://dl.acm.org/doi/abs/10.1145/3183713.3196937
+[7]: https://github.com/atframework/libatbus
